<resources>
    <string name="app_name">ZMService</string>

    <!-- Home Screen -->
    <string name="loading">Đang tải về</string>
    <string name="link128">128</string>
    <string name="link320">320</string>
    <string name="linkLossless">Lossless</string>

    <string name="failure">Tải thất bại, vui lòng thử lại sau!</string>
    <string name="copy_right">Copy Right HTSI - ç2016</string>
    <string name="storage">Bài hát đã lưu - Thư mục: </string>


    <!-- Search Screen-->
    <string name="search">Tìm </string>
    <string name="search_hint">Nhập tên bài hát</string>
    <string name="no_name">No name</string>
    <string name="no_song_info">Không tìm được bài hát! Vui lòng thử lại sau.</string>
    <string name="no_search_results">Không tìm thấy \n“%1$s”</string>

</resources>
