<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:progressTint="@color/primary"/>

    <LinearLayout
        android:id="@+id/contentInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible"
        android:weightSum="4"
        tools:context=".ui.activity.MainActivity"
        >

        <ImageView
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:contentDescription="@null"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/app_name"
                android:textColor="#FFF"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginTop="8dp"
                android:text="@string/app_name"
                android:textColor="#FFF"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnLink128"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/artist"
                android:layout_marginTop="8dp"
                android:text="@string/link128"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnLink320"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/artist"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/link320"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnLinkLossless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/artist"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/linkLossless"/>



        </RelativeLayout>

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/copy_right"
            android:textColor="@android:color/white"
            />
    </LinearLayout>
</FrameLayout>